# ChangeLog for lxqt-base/lxqt-notificationd
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/lxqt-base/lxqt-notificationd/ChangeLog,v 1.5 2014/11/08 17:24:44 jauhien Exp $

*lxqt-notificationd-0.8.0 (08 Nov 2014)

  08 Nov 2014; Jauhien Piatlicki <jauhien@gentoo.org>
  +lxqt-notificationd-0.8.0.ebuild:
  version bump

  08 Nov 2014; Ben de Groot <yngwin@gentoo.org> lxqt-notificationd-0.7.0.ebuild:
  Move libqtxdg to new category

  02 Nov 2014; Jauhien Piatlicki <jauhien@gentoo.org>
  lxqt-notificationd-0.7.0.ebuild:
  make dependencies more precise (preparation for LXQt 0.8.0 release)

  29 May 2014; Manuel Rüger <mrueg@gentoo.org> lxqt-notificationd-0.7.0.ebuild:
  Add ~arm keyword.

*lxqt-notificationd-0.7.0 (27 May 2014)

  27 May 2014; Jauhien Piatlicki <jauhien@gentoo.org>
  +lxqt-notificationd-0.7.0.ebuild, +metadata.xml:
  Initial import from the qt overlay, thanks to Harvey Mittens and Davide
  Pesavento, see bug #509946