@@ -3,24 +3,24 @@ Hash: SHA256
 
 DIST lxqt-notificationd-0.7.0.tar.xz 38064 SHA256 bda7c841df4c4e340840877f83dc36188c52ffaff060c45b9e7f5b6f4075f11c SHA512 341a167fe7e5413d5e925cdfe7303efe255303c68f75bfa5a73808f566aee7cdfcc19bd52f4d623c7bf97c45020ffaa3fc9f65ae99c12a3199acfa8b287c1940 WHIRLPOOL 7f3ba04ac5c97224bf7a6193855245c6f879b0397a843a3f64d4de3dc3de8eb0546f92aa2ff8c0a28f4aaa87630ab3b42b6f8dec9e7468052c747018decd1c4a
 DIST lxqt-notificationd-0.8.0.tar.xz 38336 SHA256 720b6cca74ff5c0433b39feb3040cc25cd6fdcbdfe51186cefac7a42e157999b SHA512 83c32ea51fada6a0d9dadf8474942ad3896063e7b30ba68a663b5f568039bbd0c7ab6e4feaacc1dfa883cc4af431546003e00e6e632fefe34ac6b359e3bc2efd WHIRLPOOL eb4b38e6f7f5af652e612a78388dd37afedb569cc00b00279689642b3ebb888c174a244cf7fecf24afe0be35dadecf0755496006030cc4dbe690ae39db76f306
-EBUILD lxqt-notificationd-0.7.0.ebuild 726 SHA256 cdcaec984ea5a749ce76cde63f46f6ebeb33becd91b597d7a6c2a58f9efa0ecc SHA512 83bb0a7df415581cf267ecde20fdb607daebaae76f0b68110e37ba0f9fccf792112fda99d2a1eaa1e682b17e7242e22359274c5382fbbec8e2bfd09cab1b2132 WHIRLPOOL 382afcc46f49007ca598b7b45e0949f824b6f1a33ac8e58c3338b1738e3e4955de9e0b50f1ac542757d847300fbb5a978ca2d3ceca5742bd15e26f9c56ddaa6e
-EBUILD lxqt-notificationd-0.8.0.ebuild 898 SHA256 2e99776c586b3f4c29b5b9982d32eda8b954b2e16d3652b82089309d8556a586 SHA512 266bf13582ad5d2536f25fedb3ececd9556764afe4a42347629f68b4bc8651c992f0b49bddb1f977d9a525c5892d9a13b641aac270497f2405af29125f056092 WHIRLPOOL a55d9acb99941bebb8af811dfee198cfb1572b1e6cc87491d0979309603896ff0d8f8928f5ec236d758310a4ca0611e72409f683d3203c63dc7cbf170a338ab4
-MISC ChangeLog 1002 SHA256 52242e5fda9c4134da0ca03dc316ea425fa21a076d749dcf5e9eef96d9796445 SHA512 c8054ac5af29712193ba392f149a3f95bc6feecc603f5fe8ffd0a7574985a84acff7f665d9605176d641a3e11f782c5a7e1c770c54b835c5098c252ac71333a2 WHIRLPOOL dcbf15d19029ab018d4b66ea53df7d7e49ffd0cf3f9aa875c2576e03f64c7b8ccd6c5fb2c64a2f6cafe48d60ea5d41fd1c87a0c63cc1ff99292e5a11c983a2cb
+EBUILD lxqt-notificationd-0.7.0.ebuild 759 SHA256 7e671531bdc59b544c386f44fe147eb9e31f5e2df7d2357dbcbbd4d795a8ac79 SHA512 0b818284ae36cae2eb20a11d42bc4b950bf39523e79c22b1b0028b6685ee971c1b85551a3486c8df055918d114da60d055fa1001f500517285e3274d7aea91b6 WHIRLPOOL 05c9a8ab05b04a7c52e8f4f1cd11b33ba5de02a049885eb237909575b81ebd337ea92e38a07ec2c69be78b79396784d2d7f0710ebb5f8ef43109d18290afb333
+EBUILD lxqt-notificationd-0.8.0.ebuild 928 SHA256 a1ca440684261fa0a007d4669fce9ec4bd4f4ed6dd440dde49587d6f86245b2c SHA512 6254ecad9281bbcd35dda62b6c88cd092ad371bacd3cde1c0614f6e7d064586e7970c55811e47630ae03727b3d454e8a89a344cb21a23ab9e0cfc32a3b632178 WHIRLPOOL 20aee5f9c4eae9066ebfc4320dbafe6f2252205720d727197a21ea2b6963c6651fe2585dc54369e68536ae442e34f1c2213f883cf94d116639ea7bba4eda8f33
+MISC ChangeLog 1206 SHA256 e985c896115c9fdb59011564cb02a7c10b18a4449705fd2cc322aff911dee39c SHA512 9cbb935d0636d0e9f6fee34d86e6b68c6e64986efbe6d342d349158028ee41e222cf1e60aad26d83df571a2ee97a2e9798f6f1985888d219d233bec545d52b97 WHIRLPOOL d9ef203a3ffa5d70fc1c7cee5d79f2570b5becfa4abae346c89d7e8fe8aaf4e7da3b76c5b9951f07f9ffb18b0ba6232c6fe84e3eecb584dc9cce0432eba17f30
 MISC metadata.xml 263 SHA256 d23df106b61ed123144d9d24eea822badfbe6cb7d8d4ec61215af73b4c8f1fc6 SHA512 9f99b13f568e1cfda82dc35cd0b95fba565d5f18909db7b0d7dff75273cf4076a68288768ee5f65a70485833971fb3e511919a9e80d09e0d96f3a38744435d3a WHIRLPOOL 6bfa4c8737764e7450195f3ffd2e8fe8531ad44dfa02b0d7819678eeb7898280f07ed13ac87e0158abb6d9b804ee617b7683f73a4cd17db822419eba55fa62c6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUaJu3AAoJELvuk32y76HUTYkP/1qHe5qfl8SlMuUSmX5nBwbV
-Ir2jszTm3RONTwJxWkmujQ+WnCixFlzbXuqZWptHc02vIJawd9UwblYdFJuvqxoQ
-rP+g781qeT630LT4twFJ9rNq2LljWmCXdw7qsHtgqV+Lf8ZllRxB9WXHoXE0ZzLg
-9S1k9s+TwqIUgKSOwP69104sHDGFTnqwZBB4UgPDqmYBV1TDUQOOjMbsV3yMxjyz
-eZ9tex16zQpY2ulhrdMVNP4dLwYX+qz7Pi2mVhNzniuaCfA/JMrO7+oJQY8qq37A
-8c3arv5jFtNlanbrbB1D8AO+uLc2wTWrN2kmwpRMZ4l1VjcBbDGrnnKmSNyzE6gK
-nIyyp14f34YmIn/G1kRmY3OI1vZF+R+Yqq4ZwSaWCeyqxHESxT3Ybyp+H4D20aqd
-5CGe7964Jjektsnw53GkO8ID0BHkjOSsvan+IJyjgXJXca+HwUJzWqFv7gA52a8o
-cQB3NdSKWVr+S2O2Lvbo4xYp8PumZL9MVD5Y+ydiQ9ZspWh83KtCGxDqiav330Y8
-8W/2fN2pS956NM/TF8ZXQxm+SlcHHThlyQ1kLrmLflaLBaugdsRUM7sbg+Hf19Y3
-pctV8MNp4W1M/pggbA5NwYn8GxiyyvPD4bu2XrYXzyNpR/5mHEkRUWUxR1nd3j4w
-p8lqFQh5i65zDJEaf6a+
-=28Q1
+iQIcBAEBCAAGBQJUcgl9AAoJELvuk32y76HUUSsP/1R3ZnQIzvEhM5dW5Hul0ypn
+3UNwLcO3Q2KVjDsbRdEeWxwVSnfPTDtENl9eVj32WEm3My4Juts2MFvkZ9LCRWpi
+FgbZXinIItIOwZhrIM2N4DVynj8X2JTSAQ4glkxzM15mU87UdxVXsWt8GGWiYE0B
+dZlloMyp0EJtA+NWrXlzZm4hHAehF27y+clyuA8sNiNu33pGGNYFt5bkVZmM98BX
+Kcd/nCO9m88lvpTYE1gkRB5JT8d7YCBdOdhFV9oD1fBRWoft4jHl49nFZ5QyeSDi
+OBbrIgFp8BQpD7pDfeHaWh1nBAAUY8589liZajF2TnlZUVrriDl+NgA2JZ8r9BjJ
+A/DtsjDh/myB08B6T7gijNWfGNbaIY4yMUcwc1d8qQlkHIIdpZ6LuLu2Tr284m7/
+jiU8nHwoa0WeIj2iAzH/I7bXNbDciFaugceq9cCqMhBwIVWEZn5TQMCgxKslbW6y
+LTigaJO/ohped7NxHmxhJZd9zOav1ZiMgevBQd5GdA/+dlj05bRGASA2a5UYsh6p
+1hXXpmaeti7JUjR2OkdhEFxv43wkFyhanAUUtpQFrbi6TcmwjYj/Nejr/gWUIcce
+tjV1Wky5Xkzzv9U3c8GTqPm+mReiS8/alfvOHbIV7J34QYF1CphRhRJLY4EyItgt
+g4S+brayfVOcZFtnQAQp
+=nuBf
 -----END PGP SIGNATURE-----
