@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/lxqt-base/lxqt-notificationd/lxqt-notificationd-0.8.0.ebuild,v 1.2 2014/11/16 12:42:27 jauhien Exp $
+# $Header: /var/cvsroot/gentoo-x86/lxqt-base/lxqt-notificationd/lxqt-notificationd-0.8.0.ebuild,v 1.3 2014/11/23 16:21:10 jauhien Exp $
 
 EAPI=5
 inherit cmake-utils
@@ -20,6 +20,7 @@ LICENSE="GPL-2 LGPL-2.1+"
 SLOT="0"
 
 DEPEND="
+	>=dev-libs/libqtxdg-1.0.0
 	dev-qt/linguist-tools:5
 	dev-qt/qtcore:5
 	dev-qt/qtdbus:5
@@ -28,7 +29,7 @@ DEPEND="
 	dev-qt/qtx11extras:5
 	dev-qt/qtxml:5
 	~lxqt-base/liblxqt-${PV}
-	>=dev-libs/libqtxdg-1.0.0
+	~lxqt-base/lxqt-common-${PV}
 	x11-libs/libX11
 "
 RDEPEND="${DEPEND}"
